Closed
Bug 244876
Opened 21 years ago
Closed 21 years ago
Remove 2 unnecessary memsets in nsTextFrame.cpp
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
People
(Reporter: rp.moz, Assigned: rp.moz)
Details
(Keywords: perf)
Attachments
(1 file)
|
938 bytes,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
See:
http://groups.google.nl/groups?hl=nl&lr=&ie=UTF-8&frame=right&th=55c27fe62dd23160&seekm=c94ut5%24bn31%40ripley.netscape.com#link1
Remove these 2 memset in nsTextFrame.cpp since they seem do nothing usefull.
http://lxr.mozilla.org/mozilla/source/layout/html/base/src/nsTextFrame.cpp#164
http://lxr.mozilla.org/mozilla/source/layout/html/base/src/nsTextFrame.cpp#187
I'll try to make a patch once my fresh build is done.
Comment 1•21 years ago
|
||
Note roc's idea of leaving them in debug builds and using 0xdd or something. I
like that thought.
| Assignee | ||
Comment 2•21 years ago
|
||
Voila. I didn't add a debug variable and any assertion because they both
already exist: the variable containing the length is mBufferLen and there are
already 2 assertions at what seems to be the most strategic place to put one:
http://lxr.mozilla.org/mozilla/source/layout/html/base/src/nsTextFrame.cpp#1647
| Assignee | ||
Updated•21 years ago
|
Attachment #149674 -
Flags: review?(bzbarsky)
Comment 3•21 years ago
|
||
Comment on attachment 149674 [details] [diff] [review]
patch
r+sr=bzbarsky
Attachment #149674 -
Flags: superreview+
Attachment #149674 -
Flags: review?(bzbarsky)
Attachment #149674 -
Flags: review+
Comment 4•21 years ago
|
||
Checked in. This made Tp drop by about 1%, as advertised. ;)
For future reference, diffs with more context (-u8, say) and using the -p option
are a lot easier to review....
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•