Remove unnecessary memsets.  Bug 244876, patch by Rene Pronk <r.pronk@its.tudelft.nl>, r+sr=bzbarsky